  research into its user experience implications.
* Added $wgJQueryVersion, $wgJQueryMinified and $wgJQueryOnEveryPage (true by
  default) to configure loading of jQuery by MediaWiki.
* XmlFunctions.php has been removed. Use the Xml or Html classes as appropriate.
* Added $wgSQLMode for setting database SQL modes - either performance (null)
  or other reasons (such as enabling stricter checks)

=== New features in 1.17 ===
* (bug 10183) Users can now add personal styles and scripts to all skins via
  User:<name>/common.css and /common.js (if user css/js is enabled).
* (bug 22748) Add anchors on Special:ListGroupRights.
* (bug 21981) Add parameter 'showfilename' to <gallery> to automatically 
  apply the names of the individual files within the gallery.
* Future-proof redirection to fragments in Gecko, so things work a little nicer
  if they fix <https://bugzilla.mozilla.org/show_bug.cgi?id=516293>.
* Support git:// and mms:// protocols by default for external links.
* (bug 15810) Blocked admins can no longer unblock themselves without the
  'unblockself' permission (which they have by default).
* (bug 18499) Added "enhanced" URL parameter to switch between old and enhanced
  changes list.
* (bug 22925) "sp-contributions-blocked-notice-anon" message now displayed when
  viewing contributions of a blocked IP address.
* (bug 22474) {{urlencode:}} now takes an optional second paramter for type of
  escaping.
* Special:Listfiles now supports a username parameter.
* Special:Random carries over query string parameters.
* (bug 23206) Add Special::Search hook for detecting successful "Go".
* When visiting a "red link" of a deleted file, a deletion and move log excerpt
  is provided on the Upload form.
* (bug 22647) Add category details in search results.
* (bug 23276) Add hook to Special:NewPages to modify query.
* Add accesskey 's' and tooltip to 'Save' button at Special:Preferences.
* Add accesskey 'b' and tooltip to the summary field of edit mode.